--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
           </div>
           <!-- /agenda block -->
 
-          <div class="d-flex  justify-content-left justify-content-lg-center text-center"  id="pagination_agenda">
+          <div class="d-flex  justify-content-left justify-content-lg-center "  id="pagination_agenda">
 
             <div >
               <a href="#" class="pagination_agenda pagination_agenda_act" data-agenda="0"><hr></a>
@@ -581,7 +581,7 @@
           <!-- lavie_block -->
           <div class="d-flex flex-wrap " id="lavie_block">
 
-            <div class="d-flex justify-content-center block_lavie ">
+            <div class="d-flex justify-content-center justify-content-md-left block_lavie ">
               <a href="#">
                 <img src="img/lavie1.png">
                 <div class="d-flex justify-content-center lavie">
@@ -590,7 +590,7 @@
               </a>
             </div>
 
-            <div class="d-flex justify-content-center block_lavie ">
+            <div class="d-flex justify-content-center justify-content-md-left block_lavie ">
               <a href="#">
                 <img src="img/lavie2.png">
                 <div class="d-flex justify-content-center lavie">
@@ -599,7 +599,7 @@
               </a>
             </div>
 
-            <div class="d-flex justify-content-center block_lavie ">
+            <div class="d-flex justify-content-center justify-content-md-left block_lavie ">
               <a href="#">
                 <img src="img/lavie3.png">
                 <div class="d-flex justify-content-center lavie">
@@ -608,7 +608,7 @@
               </a>
             </div>
 
-            <div class="d-flex justify-content-center block_lavie">
+            <div class="d-flex justify-content-center justify-content-md-left block_lavie">
               <a href="#">
                 <img src="img/lavie4.png">
                 <div class="d-flex justify-content-center lavie">
@@ -617,7 +617,7 @@
               </a>
             </div>
 
-            <div class="d-flex justify-content-center block_lavie">
+            <div class="d-flex justify-content-center  justify-content-md-left block_lavie">
               <a href="#">
                 <img src="img/lavie5.png">
                 <div class="d-flex justify-content-center lavie">
@@ -626,7 +626,7 @@
               </a>
             </div>
 
-            <div class="d-flex justify-content-center block_lavie">
+            <div class="d-flex justify-content-center  justify-content-md-left block_lavie">
               <a href="#">
                 <img src="img/lavie6.png">
                 <div class="d-flex justify-content-center lavie">
@@ -642,7 +642,7 @@
 
 
         <!-- retrouvez_nous -->
-        <div class="d-flex flex-sm-wrap" id="retrouvez_nous">
+        <div class="d-flex flex-wrap" id="retrouvez_nous">
           <div class="d-flex flex-column" id="block_accueil">
             <div class="d-flex justify-content-center " id="accueil_title">
               <h2>
@@ -683,7 +683,7 @@
 
 
         <!-- formation -->
-        <div class="d-flex flex-column justify-content-center" id="formation">
+        <div class="d-flex  flex-column justify-content-center" id="formation">
           
           <div class="sp_sub_title">
             <h6>La région</h6>
@@ -699,7 +699,7 @@
           <!-- /nos_formation -->
 
           <!-- block_formation -->
-          <div class="d-flex" id="block_formation">
+          <div class="d-flex flex-wrap" id="block_formation">
             <div class="d-flex flex-column" id="block_formation_b">
               <div id="formation_title">
                 <h2>
@@ -711,18 +711,22 @@
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam in aliquam leo. Aliquam nisi eros, laoreet vitae ipsum a, sodales dignissim ex. Fusce id vehicula nibh. Nulla sit
                 </p>
               </div>
-              <div class="d-flex savoir_btn">
+              <div class="d-flex savoir_btn" id="formation_btn">
                 <a href="#">
                   <h5><i class="fas fa-arrow-right"></i>  en savoir plus</h5>
                 </a>
               </div>
             </div>
-            <div id="formation_img">
-              <img src="img/formation.png">
-              <div class="d-flex  ml-auto" id="sp_formation_img">
-                <img src="img/sp_formation.png">
-              </div>
+            <div  id="formation_img_b">
+              <div class="d-flex w-100" id="formation_img">
+                <img src="img/formation.png">
+              </div>              
             </div>
+          </div>
+          <div class="d-flex w-100" id="sp_formation_img_b">
+            <div class="d-flex  ml-auto" id="sp_formation_img">
+              <img src="img/sp_formation.png">
+            </div>              
           </div>
           <!-- /block_formation -->
         </div>
@@ -747,18 +751,19 @@
             <div id="posts_instagrams">
               <h5>DERNIERS POSTS INSTAGRAMS</h5>
             </div>
-            <div class="d-flex flex-wrap justify-content-left" id="img_reseaux">
-              <div class="d-flex  justify-content-between" id="inti_reseaux">
-                <div class="mr-4 reseaux_img">
-                  <a href="#"><img src="img/reseaux1.png" class="pppp"></a>
+            <div class="d-flex  justify-content-left" id="img_reseaux">
+
+              <div class="d-flex   flex-wrap  flex-lg-nowrap flex-xl-nowrap" id="inti_reseaux">
+                <div class=" reseaux_img">
+                  <a href="#"><img src="img/reseaux1.png" ></a>
                 </div>
-                <div class="mr-4 ml-4 reseaux_img">
+                <div class=" reseaux_img">
                   <a href="#"><img src="img/reseaux2.png"></a>
                 </div>              
-                <div class="mr-4 ml-4 reseaux_img">
+                <div class=" reseaux_img">
                   <a href="#"><img src="img/reseaux3.png"></a>
                 </div>              
-                <div class="mr-4 ml-4  reseaux_img">
+                <div class="  reseaux_img">
                   <a href="#"><img src="img/reseaux4.png"></a>
                 </div>                
               </div>
@@ -771,7 +776,7 @@
 
 
         <!-- footer -->
-        <footer class="d-flex w-100" id="footer">
+        <footer class="d-flex flex-wrap flex-lg-nowrap w-100" id="footer">
           <div class="d-flex flex-column" id="footer_info">
             <div class="d-flex " id="footer_title">
               <h2>
@@ -784,7 +789,6 @@
               </h6>
             </div>
             <div  class="d-flex" id="sp_gropue">
-              <div class="d-flex" >
 
                 <div class="d-flex contact" >
                   <div class="contact_img">
@@ -811,11 +815,10 @@
                     </a>                  
                   </div>                  
                 </div>
-              </div>
             </div>
 
 
-            <div class="d-flex contact">
+            <div class="d-flex contact" id="radio_b">
               <div class="radio_img">
                 <a href="#">
                   <img src="img/radio.png">
@@ -839,7 +842,7 @@
           </div>
 
           <!-- footer_map -->
-          <div id="footer_map">
+          <div class="d-flex" id="footer_map">
             <img src="img/map.png">
           </div>
           <!-- /footer_map -->
@@ -876,7 +879,6 @@
 
     </div>
 
-    
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
